testsuite/tests/grammar/invalid_token_node/derive_field/test.lkt
from common import FooNode, Identifier

@abstract
class BaseExample: FooNode implements TokenNode {
}

class Example: BaseExample {
    @parse_field
    f: Identifier
}
